# esoui_downloads

./: .gitignore  Makefile  README.md  app.Dockerfile  data-pipeline.Dockerfile  docker-compose.yaml  prefect.env  pyproject.toml
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/: admin.py  downloads_.py  main.py
app/src/static/: script.js  simpler-script.js  style.css  toggle-theme.js
app/src/templates/: esoui-downloads-author.html  esoui-downloads-single.html  esoui-downloads.html
common/infra/database/: addons.py  schemas.py
data_pipeline/: pyproject.toml
data_pipeline/src/: main.py  old_database.py
src/app/: admin.py  main.py  models.py
src/app/services/: addons.py
src/app/static/css/: style.css
src/app/static/js/: chart.js  search.js  with-chart.js
src/app/templates/: addon.jinja  author.jinja  base.jinja  downloads.jinja  search.jinja
src/core/: database.py  schemas.py
src/data_pipeline/: main.py  models.py  old_database.py
