[project]
name = "esoui-downloads"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
app = [
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "sqladmin>=0.21.0",
    "uvicorn>=0.38.0",
]
data-pipeline = [
    "fake-useragent>=2.2.0",
    "fastparquet>=2024.11.0",
    "pandas>=2.3.3",
    "prefect>=3.4.24",
    "pyarrow>=21.0.0",
    "requests>=2.32.5",
]
